--- a/app/src/main/res/layout/activity_poll_detail.xml
+++ b/app/src/main/res/layout/activity_poll_detail.xml
@@ -70,6 +70,7 @@
         android:id="@+id/poll_detail_container"
         android:layout_width="match_parent"
         android:fillViewport="true"
+       android:layout_marginTop="25px"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 <!--
@@ -82,8 +83,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|start"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@+id/poll_detail_container"
-        app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/ic_menu_share" />
+        app:fabSize="auto"
+        app:layout_anchor="@+id/app_bar"
+        app:layout_anchorGravity="end|bottom"
+        app:srcCompat="@drawable/ic_share_white_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
